--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "africastalking": "^0.5.5",
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
