Tried documenting using swagger

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0",
     "pg": "^8.8.0",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "prisma": "^4.5.0"
