--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
